# eclipse-flix

./: .gitignore  .project  README.md  format.xml  plugin.xml  pom.xml
bundles/: .project  pom.xml
bundles/de.hetzge.eclipse.flix/: .project  build.properties  language-configuration.json  plattform.target  plugin.xml
bundles/de.hetzge.eclipse.flix.core/: .project
bundles/de.hetzge.eclipse.flix/src/aaa/: MyActionProvider.java  MyContentProvider.java  MyLabelProvider.java
bundles/de.hetzge.eclipse.flix/syntaxes/: flix.tmLanguage.json
bundles/de.hetzge.eclipse.flixmanifest/: .project  build.properties  plugin.xml
bundles/de.hetzge.eclipse.flixmanifest/assets/icons/: icon.png-autosave.kra
bundles/de.hetzge.eclipse.flixmanifest/rusttoml/: .project  Cargo.toml  readme.md
bundles/de.hetzge.eclipse.flixmanifest/rusttoml/src/: lib.rs
bundles/de.hetzge.eclipse.toml/: .project  build.properties  plugin.xml
bundles/de.hetzge.eclipse.toml/syntaxes/: toml.tmLanguage.json
features/: .project  pom.xml
features/de.hetzge.eclipse.flix.feature/: .project  feature.xml
mavendependencies/: .project  README.md  pom.xml
releng/: .project  pom.xml
releng/de.hetzge.eclipse.flix.configuration/: pom.xml
releng/de.hetzge.eclipse.flix.update/: .project  category.xml  pom.xml  site.xml
src/de/hetzge/eclipse/: EclipseUtils.java  Utils.java
src/de/hetzge/eclipse/flix/: Activator.java  (+17 more)
syntaxes/: flix.tmLanguage.json
targets/: .project  pom.xml
targets/base/: .project  base.target  pom.xml
website/: index.css  index.html
website/inter/: LICENSE.txt  inter.css
(+224 files in other folders)
