[package]
name = "rusttoml"
version = "0.1.0"
edition = "2021"

[dependencies]
extism-pdk = "1.3.0"
serde = { version = "1.0.213", features = ["derive"] }
toml_edit = "0.22.22"
wasm-bindgen = "0.2"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1